fix. 정적 분석 도구에 의해 발견된 BUG 유발 코드 및 Code SMELL 단계의 오류를 수정함